--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "cross-env": "6.0.3",
     "dotenv": "8.2.0",
     "express": "4.17.1",
-    "http-error": "0.0.6",
+    "express-async-handler": "^1.1.4",
+    "http-errors": "^1.7.3",
     "http-status-codes": "^1.4.0",
     "swagger-ui-express": "4.1.2",
     "uuid": "3.3.3",
