feat: add draft for authentification

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=4000
-AUTH_MODE=false
-JWT_SECRET_KEY=secret-key
+AUTH_MODE=true
+JWT_SECRET_KEY=MySecretKey!
 # Set your database connection information here
 MONGO_CONNECTION_STRING=mongodb+srv://MaxGar:XeuD8w@cluster0-9mtwx.mongodb.net/rest?retryWrites=true&w=majority
