--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,20 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "TestsAuth",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "program": "${workspaceFolder}\\node_modules\\jest\\bin\\jest.js",
+            "args": [
+                "--testMatch",
+                "\"<rootDir>/test/e2e/test/*.test.js\"",
+            ],
+            "env": {"DEBUG":"rs:*", "TEST_MODE":"auth"},
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Tests",
             "skipFiles": [
                 "<node_internals>/**"
@@ -25,6 +39,7 @@
                 "--testMatch",
                 "\"<rootDir>/test/e2e/test/*.test.js\"",
             ],
-        },
+            "env": {"DEBUG":"rs:*"},
+        },        
     ]
 }
